--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"ip":"Andero_SMP.aternos.me","name":"noobdaabhay","port":"55522"}
+{"ip":"LONESTANDERSMP.aternos.me:46983","name":"LONESTANDERSMP.aternos.me","port":"46983"}
